# cmake-metal-cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/metal/: add.metal  add_wrapper.cpp  add_wrapper.hpp
src/platform/: CMakeLists.txt  platform.cpp  platform.hpp
src/platform/metal-cpp/: platform-metal.cpp
